# Recon-Plotter

./: .gitignore  .prettierrrc.yaml  CMakeLists.txt  README.md  settings.json.in
qcustomplot/qcpplotter/: qcustomplot.cpp  qcustomplot.h
qcustomplot/qplotter/: qcustomplot.cpp
sample/: sample1.plot  sample2.plot
src/: CMakeLists.txt  analogsignal.cpp  analogsignal.h  chartwindow.cpp  chartwindow.h  colordelegate.cpp  colordelegate.h  datafile.cpp  datafile.h  doublelineedit.cpp  doublelineedit.h  icons.qrc  localsocket.cpp  localsocket.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h  recon-plotter_de.ts  recon-plotter_ru.ts  recon-plotter_ua.ts  recontextfile.cpp  recontextfile.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  signalsmodel.cpp  signalsmodel.h  test.cpp  test.h  translations.qrc  utils.cpp  utils.h
src/resources/: resources.qrc  translations.qrc
src/resources/i18n/: recon-plotter_de.ts  recon-plotter_ru.ts  recon-plotter_ua.ts
tests/: CMakeLists.txt  test_data.txt  tst_testrecontextfile.cpp  tst_utils.cpp
